1) GUI improvement: more items are displayed alongside icons: a) the topics on the fulltext search result, and b) the items of the type menu. 2) Bug fixes on the canvas: a) topic label clipping, b) topic doesn't jump when move starts.

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -2,52 +2,64 @@ body {
     font-family: "Lucida Grande";
 }
 
-#upper_toolbar {
+#upper-toolbar {
     margin-bottom: 0.4em;
     padding: 0.3em;
 }
 
-#search_form {
+#search-form {
     float: left;
     margin-right: 3em;
 }
 
-#create_form {
+#create-form {
     float: left;
     margin-right: 3em;
 }
 
-#canvas_panel {
+#canvas-panel {
     float: left;
-    margin-right: 1em;
+    margin-right: 1.2em;
 }
 
 #canvas {
     background: #eee;
 }
 
-#document_form {
+#document-form {
     line-height: 1.6em;
 }
 
-#detail_panel {
+#detail-panel {
     height: 600px;
     overflow: auto;
 }
 
-.field_name {
+.field-name {
+    font-size: 75%;
     font-weight: bold;
+    color: gray;
 }
 
-.field_value {
+.field-value {
     margin-bottom: 1em;
 }
 
-.field_value label {
+.field-value label {
     display: block;
 }
 
-#upload_target {
+.type-icon {
+    border-style: none;
+}
+
+.menu-icon {
+    border-style: none;
+    vertical-align: middle;
+    padding-right: 12px;
+}
+
+#upload-target {
     display: none;
 }
 
@@ -56,10 +68,11 @@ body {
 .contextmenu {
     background: white;
     border: 1px solid darkgray;
-    font-weight: bold;
     font-size: 85%;
+    font-weight: bold;
     padding-top: 0.3em;
     padding-bottom: 0.3em;
+    z-index: 1000;
 }
 
 .contextmenu a {
@@ -79,14 +92,14 @@ body {
 
 /* Autocomplete List */
 
-.autocomplete_list {
+.autocomplete-list {
     position: absolute;
     background: white;
     border: 1px solid darkgray;
     display: none;
 }
 
-.autocomplete_list a {
+.autocomplete-list a {
     color: black;
     text-decoration: none;
     display: block;
@@ -94,7 +107,7 @@ body {
     padding-right: 0.6em;
 }
 
-.autocomplete_list .active {
+.autocomplete-list .active {
     color: white;
     background: #555;
 }
